2005-03-15 22:58  antirez

	* ChangeLog, Makefile: clean target of Makefile now deletes .xo
	  files too.

2005-03-15 15:42  antirez

	* ChangeLog, jim.c, jim.h: A first version of [info complete].

2005-03-15 15:05  antirez

	* BUGS, ChangeLog, jim.c, test.tcl: [info level ?level?] fixed.
	  Tests uncommented.

2005-03-15 11:31  antirez

	* AUTHORS, ChangeLog: More credits in the AUTHORS file

2005-03-14 17:36  patthoyts

	* jim-win32.c: Added a bunch of cursor handling apis

2005-03-14 17:35  patthoyts

	* jim.c: const police

2005-03-14 15:39  antirez

	* ChangeLog, jim.c, jim.h: 'iterator' argument modified to 'iter'
	  for C++ STL safety.

2005-03-14 14:11  antirez

	* ChangeLog, jim.c, jim.h: more fixes to allow inclusion of jim.h
	  into C++ programs.

2005-03-14 13:20  antirez

	* ChangeLog, jim.h: Some change to make jim.h more C++ friendly,
	  still not working with g++ btw.

2005-03-14 10:16  antirez

	* ChangeLog, TODO, jim.c: Removed the inclusion of a not-needed
	  header file "sys/time.h" that prevented compilation with
	  JIM_ANSIC under non POSIX systems.

2005-03-14 08:22  antirez

	* ChangeLog, TODO, jim.c: [lmap] command.

2005-03-13 18:43  antirez

	* ChangeLog, jim.h: Max nesting depth modified to 10000

2005-03-13 16:53  antirez

	* ChangeLog, jim.c: [string first]. Tests still not added, until
	  [string] is not (almost instead) complete.

2005-03-13 09:36  antirez

	* ChangeLog, jim.c: [string index] implemented

2005-03-12 22:42  antirez

	* ChangeLog, jim.c: Jim_GetEnum() will now sort the options in the
	  error message (ss)

2005-03-12 21:26  antirez

	* ChangeLog, jim.c, jim.h: Added the ability to compile with
	  -DJIM_ANSIC to use only ANSI-C features and libraries.

2005-03-12 10:18  antirez

	* ChangeLog, jim.c, jim.h: Added the Jim_FreeNewObj() macro to free
	  objects with refcount == 0 instead to call Jim_IncrRefCount +
	  Jim_DecrRefCount(), or directly Jim_FreeObj(). Code modified