@@ -1,3 +1,8 @@
+2005-03-16 13:55  antirez
+
+	* ChangeLog, jim.c: Fixed a bug introduced in the Gargage
+	  Collection code some commit ago.
+
 2005-03-15 22:58  antirez
 
 	* ChangeLog, Makefile: clean target of Makefile now deletes .xo
